RESOLVED FIXED220435
PlaybackSessionManager::m_clientCounts is not updated correctly when a video enters picture-in-picture from fullscreen
https://bugs.webkit.org/show_bug.cgi?id=220435
Summary PlaybackSessionManager::m_clientCounts is not updated correctly when a video ...
Peng Liu
Reported 2021-01-07 14:16:46 PST
PlaybackSessionManager::m_clientCounts is not updated correctly when a video enters picture-in-picture from fullscreen
Attachments
Patch (2.41 KB, patch)
2021-01-07 14:25 PST, Peng Liu
eric.carlson: review+
ews-feeder: commit-queue-
Patch for landing (2.40 KB, patch)
2021-01-07 14:37 PST, Peng Liu
no flags
Patch (5.10 KB, patch)
2021-01-08 12:05 PST, Peng Liu
no flags
Peng Liu
Comment 1 2021-01-07 14:22:31 PST
Peng Liu
Comment 2 2021-01-07 14:25:41 PST
Eric Carlson
Comment 3 2021-01-07 14:33:58 PST
Comment on attachment 417212 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=417212&action=review > Source/WebKit/ChangeLog:11 > + because `m_clientCounts` has been updated when the video enters fullscreen. s/has been updated when the video enters/was updated when the video entered/
Peng Liu
Comment 4 2021-01-07 14:37:48 PST
Created attachment 417213 [details] Patch for landing
EWS
Comment 5 2021-01-07 16:31:03 PST
Committed r271273: <https://trac.webkit.org/changeset/271273> All reviewed patches have been landed. Closing bug and clearing flags on attachment 417213 [details].
Peng Liu
Comment 6 2021-01-08 12:05:43 PST
Reopening to attach new patch.
Peng Liu
Comment 7 2021-01-08 12:05:44 PST
EWS
Comment 8 2021-01-08 14:45:41 PST
Committed r271325: <https://trac.webkit.org/changeset/271325> All reviewed patches have been landed. Closing bug and clearing flags on attachment 417288 [details].
Note You need to log in before you can comment on or make changes to this bug.