PlaybackSessionManager::m_clientCounts is not updated correctly when a video enters picture-in-picture from fullscreen https://bugs.webkit.org/show_bug.cgi?id=220435

Reviewed by Eric Carlson.

* WebProcess/cocoa/VideoFullscreenManager.mm:
(WebKit::VideoFullscreenManager::enterVideoFullscreenForVideoElement):
When a fullscreen video enters picture-in-picture, we should not call `addClientForContext()`
because `m_clientCounts` was updated when the video entered fullscreen.
(WebKit::VideoFullscreenManager::exitVideoFullscreenToModeWithoutAnimation):
We need to call `removeClientForContext()` in this function like `didCleanupFullscreen()` does.


Canonical link: https://commits.webkit.org/232856@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271273 268f45cc-cd09-0410-ab3c-d52691b4dbfc